# compare_files_to_ia_upload

./: README.md  cli.py  pyproject.toml
compare_files_to_ia_upload/: app.py
tests/: test_compare_files_to_ia_upload.py
