[tool.poetry]
name = "compare_files_to_ia_upload"
version = "0.1.0"
description = ""
authors = ["Mark Grandi <markgrandi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
arrow = "^0.16.0"
logging-tree = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
